# Causticas

./: .gitignore  AGENTS.md  CHANGELOG.md  DISTRIBUTION_NOTICE.md  README.md  RT_RENDERER_PLAN.md  THIRD_PARTY_NOTICES.md  build.gradle  flake.nix  gradle.properties  runClient.ps1  settings.gradle
.github/workflows/: ci.yml  production-candidate.yml
buildSrc/: build.gradle
docs/: LOD_PLAN.md  dlssg-mailbox-vsync-handoff-2026-07-15.md  offline-benchmark.md  optimized-render-stack.md  performance-optimization-loop.md  release-checklist.md  settings-redesign-memory.md  settings-redesign-plan.md  sharc-runtime-validation.md  streamline-dlssg-integration-plan.md  upstream-release-delta-2026-07-15.md
docs/archive/: hue-transport-2026-07-17.md
docs/archive/hue-transport-2026-07-17/: RtHueTransport.java.txt  RtHueTransportTest.java.txt
licenses/: AMD-FidelityFX-FSR1.txt
native/: ngx_shim.cpp
native/ngx_shim/: CMakeLists.txt
native/streamline_bridge/: streamline_bridge.cpp  streamline_bridge.h  streamline_bridge_abi_test.cpp
shaders/display/: display.comp  dlssd_disocclusion.comp  exposure_hist.comp  exposure_resolve.comp  hdr_ui_composite.comp  output_scale.comp  sky_view.comp.slang
shaders/overlay/: block_outline.frag
shaders/rt/: blend.comp  display.comp  entity_glow.frag  entity_glow.vert  entity_glow_composite.frag  entity_glow_composite.vert  exposure_hist.comp  exposure_resolve.comp  hdr_to_pq.comp  hdr_ui_composite.comp  pq_to_hdr.comp  sdr_present.comp  shadow.rmiss  triangle.rchit  triangle.rgen  triangle.rmiss  world.rahit  world.rchit  world.rgen  world.rmiss
shaders/world/: offline_schedule.comp.slang  shadow.rmiss.slang  world.rahit.slang  world.rchit.slang  world.rgen.slang  world.rmiss.slang  world_common.slang  world_guide.rmiss.slang  world_layout_probe.slang
src/main/resources/: caustica.mixins.json  fabric.mod.json  (+1 more)
tools/: build-fast.ps1  caustica-debug-bridge.ps1  caustica-performance-loop.ps1  verify-streamline-acceptance.ps1
(+274 files in other folders)
